--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "@ocaml-wasm/4.08--num",
     "version": "1.4.0",
     "description": "The legacy Num library for arbitrary-precision integer and rational arithmetic (WASM port)",
-    "repository": "https://github.com/corwin-of-amber/num.git",
-    "files": ["bin"]
+    "scripts": {
+        "prepack": "rm -rf bin && mkdir -p bin && cp dllnums.wasm bin/"
+    },
+    "files": ["bin"],
+    "repository": "https://github.com/corwin-of-amber/ocaml-wasm--num.git"
 }
